<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addTaskActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddTask">

    <Spinner
        android:id="@+id/addTeamSpinner"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="404dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Team"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/addTeamSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskState" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_state"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/addTaskState"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskDescription" />

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="#4BB6E8"
        tools:ignore="MissingConstraints">

        <!-- Add any content you want in the header -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/header_title"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="47dp"
        android:text="@string/add_your_task"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/addTaskTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3"
        app:layout_constraintVertical_bias="0.011"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <!-- Username Label and Edit Text -->

        <!-- Password Label and Edit Text -->

    </LinearLayout>

    <EditText
        android:id="@+id/addTaskDescription"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/type_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.348"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_description"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/addTaskDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskTitle"
        app:layout_constraintVertical_bias="0.593" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/task_title"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/addTaskTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/addTaskTitle"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/my_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3"
        app:layout_constraintVertical_bias="0.168" />

    <TextView
        android:id="@+id/submittedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitted"
        android:textSize="24sp"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/saveTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/save_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskState"
        app:layout_constraintVertical_bias="0.945" />

    <Spinner
        android:id="@+id/addTaskState"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3"
        app:layout_constraintVertical_bias="0.481" />

    <Button
        android:id="@+id/addTaskAddImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toEndOf="@+id/saveTaskButton"
        app:layout_constraintTop_toBottomOf="@+id/addTeamSpinner"
        app:layout_constraintVertical_bias="0.916" />

    <ImageView
        android:id="@+id/addTaskImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/saveTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTeamSpinner"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/deleteImageAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete Image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addTaskAddImageButton"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toEndOf="@+id/saveTaskButton"
        app:layout_constraintTop_toBottomOf="@+id/addTaskImageView"
        app:layout_constraintVertical_bias="0.6" />


</androidx.constraintlayout.widget.ConstraintLayout>