<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userSettingPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsPage">

    <Spinner
        android:id="@+id/teamSpinnerSettingsPage"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTeamSelection" />

    <TextView
        android:id="@+id/textViewTeamSelection"
        android:layout_width="179dp"
        android:layout_height="25dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="216dp"
        android:background="@color/your_color"
        android:padding="2dp"
        android:text="Select Your Team"
        android:textColor="@color/material_dynamic_primary100"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3"
        tools:ignore="MissingConstraints" />

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="#4BB6E8"
        tools:ignore="MissingConstraints">

        <!-- Add any content you want in the header -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/header_title"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </FrameLayout>


    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="179dp"
        android:layout_height="25dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="216dp"
        android:background="@color/your_color"
        android:padding="2dp"
        android:text="@string/username"
        android:textColor="@color/material_dynamic_primary100"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/usernameInputEditText"
        android:layout_width="365dp"
        android:layout_height="48dp"
        android:layout_below="@id/textViewUsername"
        android:layout_marginTop="16dp"
        android:autofillHints="Username"
        android:hint="@string/Username_hint"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsername"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/saveUserSettingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/usernameInputEditText"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>